# AgilityBook

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AgilityBook.dox  History.txt  License.txt  MAC_BUILD.txt  Makefile.in  NAM_rules.mk  NAM_rules.mk.in  README.md  Readme-Build.txt  Readme.txt  ReleaseProcess.txt  TestV1.arb  TestV2.arb  TestV3.arb  TestV5.arb  TestV8.2.arb  Todo.txt  UNIX_BUILD.txt  bsd.mk  configure.in  gnu.mk
AgilityBook/: .gitattributes  AgilityBook.dox  History.txt  License.txt  MAC_BUILD.txt  Makefile.in  NAM_rules.mk  NAM_rules.mk.in  Readme.txt  ReleaseProcess.txt  TextV6.arb  Todo.txt  UNIX_BUILD.txt  configure.in  gnu.mk
AgilityBook/CDLabel/: AgilityRecordBook.std
AgilityBook/Misc/: ARB Cards.zdl  AgilityRecordBook-land.doc  AgilityRecordBook-port.doc  AgilityRecordBook.lsl  AgilityRecordBook.ncd  AgilityRecordBook.std  InstallGUIDs.csv  Instructions.txt  Readme - YahooALT.txt  Readme.txt  Translations.xls  arb.tif
AgilityBook/TestFiles/: TestV4.arb  TestV7.arb  TestV8.0.arb  TestV8.2.arb  TestV8.5.arb  TestV9.0.arb
AgilityBook/debian/: agilitybook.doc-base.EX  control
AgilityBook/src/: Agility Record Book Web Site.html  Agility Record Book Web Site.url  AgilityBook.hhc  AgilityBook.hhp  AgilityBookFRA.hhp  BuildHelp.bat  BuildHelp.py  ICalendarSite.h  Index.hhk  Makefile.in  UpdateHistory.py  Yahoo Discussion Group.url  stdafx.cpp  stdafx.h
src/: Agility Record Book Web Site.url  AgilityBook.hhc  AgilityBook.hhp  AgilityBookFRA.hhp  BuildHelp.bat  BuildHelp.py  ICalendarSite.h  IProgressMeter.h  Index.hhk  Makefile.in  UpdateHistory.py  Yahoo Discussion Group.html  configure.in  stdafx.cpp  stdafx.h
src/ARB/: ARB.rc  ARBAgilityRecordBook.cpp  ARBAgilityRecordBook.h  ARBBase.cpp  ARBBase.h  ARBBase64.cpp  ARBBase64.h  ARBCalcPoints.cpp  ARBCalcPoints.h  ARBCalendar.cpp  ARBCalendar.h  ARBConfig.cpp  ARBConfig.h  ARBConfigAction.cpp  ARBConfigAction.h  ARBConfigCalSite.cpp  ARBConfigCalSite.h  ARBConfigDivision.cpp  ARBConfigDivision.h  ARBConfigEvent.cpp  ARBConfigEvent.h  ARBConfigFault.cpp  ARBConfigFault.h  ARBConfigLevel.cpp  ARBConfigLevel.h  ARBConfigLifetimeName.cpp  ARBConfigLifetimePoints.cpp  ARBConfigLifetimePoints.h  ARBConfigMultiQ.cpp  ARBConfigMultiQ.h  ARBConfigOtherPoints.cpp  ARBConfigOtherPoints.h  ARBConfigPlaceInfo.cpp  ARBConfigPlaceInfo.h  ARBConfigScoring.cpp  ARBConfigScoring.h  ARBConfigSubLevel.cpp  ARBConfigSubLevel.h  ARBConfigTitle.cpp  ARBConfigTitle.h  (+67 more)
src/ARBCommon/: ARBBase64.cpp  ARBDate.cpp  ARBMisc.cpp  ARBMsgDigest.cpp  ARBMsgDigestImpl.h  ARBMsgDigestMD5.cpp  ARBMsgDigestSHA1.cpp  ARBMsgDigestSHA256.cpp  ARBTypes.cpp  ARBTypes.h  ARBUtils.cpp  BinaryData.cpp  BinaryData.h  BreakLine.cpp  BreakLine.h  Element.cpp  Makefile.in  StringUtil.cpp  VersionNum.cpp  VersionNum.h
src/ARBHelp/: ARBHelp.cpp  ARBHelp.h  ARBHelp.rc  DlgARBHelp.cpp  DlgARBHelp.h  DlgHelpPage1.cpp  DlgHelpPage1.h  DlgHelpPage3.cpp  DlgHelpPage3.h  DlgHelpPageEdit.cpp  DlgHelpPageEdit.h  DlgPageDecode.cpp  DlgPageDecode.h  DlgPageDecodeFinish.cpp  DlgPageDecodeFinish.h  DlgPageEncode.cpp  DlgPageEncode.h  DlgPageEncodeFiles.cpp  DlgPageEncodeFiles.h  DlgPageEncodeFinish.cpp  DlgPageEncodeFinish.h  Info.plist.in  Makefile.in  resource.h  version.plist.in
src/ARBUpdater/: ARBUpdater.cpp  ARBUpdater.h  ARBUpdater.rc  DlgDigest.cpp  DlgDigest.h
src/CalSites/: ARBConfigCalSite.cpp  ARBConfigCalSite.h  CalSites.cpp  CalSites.h  CalSites.rc  CalendarSiteUSDAA.cpp  CalendarSiteUSDAA.h  CalendarSites.cpp  CalendarSites.h  CheckListCtrl.cpp  CheckListCtrl.h  DlgCalendarQueryDetail.cpp  DlgCalendarQueryDetail.h  DlgPluginDetails.cpp  DlgPluginDetails.h  DlgQueryDetail.cpp  DlgQueryDetail.h  ICalendarSite.h  Info.plist.in  Makefile.in  TestConfigCalSite.cpp  calentry.txt  stdafx.cpp  version.plist.in
src/Help/: AgilityBook.txt  AgilityBookFRA.txt
src/Include/: CalcBuildNumber.py  ICalendarSite.h  IProgressMeter.h  SetBuildNumber.py  VersionInfo.h  VersionInfoARB.h  VersionNumber.h  compat.manifest
src/LibARBWin/: ARBDebug.cpp  ARBWinUtilities.cpp  CheckLink.cpp  CheckTreeCtrl.cpp  ColumnOrder.cpp  DPI.cpp  DlgConfigAccel.cpp  DlgConfigAccel.h  DlgProgress.cpp  ImageHelperBase.cpp  ImageManager.cpp  LanguageManager.cpp  ListCtrl.cpp  ListData.cpp  Makefile.in  MenuHelper.cpp  ReadHttp.cpp  RichEditCtrl2.cpp  SetupApp.cpp  SpreadSheet.cpp  StatusBarHelper.cpp  TaskbarProgress.cpp  Validators.cpp  Widgets.cpp
src/LibArchive/: LibArchive.cpp  Makefile.in  Readme.txt  stdafx.h
src/LibTidyHtml/: LibTidyHtml.cpp  LibTidyHtml.h  Makefile.in  stdafx.h
src/Libraries/: Makefile.in
src/ParseResourceHeader/: ParseResourceHeader.cpp  ParseResourceHeader.vcproj
src/Projects/: AgilityBookvscode.code-workspace  CompileDatafile.py  CompileWX.bat  CompileWX.py  RunARBTests.py  SignStuff.py  agilitybook.code-workspace
src/TestARB/: ConfigHandler.cpp  ConfigHandler.h  Local.cpp  Local.h  Makefile.in  Readme.txt  TestARB.cpp  TestARB.h  TestARB.rc  TestAgilityRecordBook.cpp  TestArchive.cpp  TestBinaryData.cpp  TestBreakLine.cpp  TestCalcPoints.cpp  TestCalendar.cpp  TestConfig.cpp  TestConfigAction.cpp  TestConfigCalSite.cpp  TestConfigDivision.cpp  TestConfigEvent.cpp  TestConfigFault.cpp  TestConfigLevel.cpp  TestConfigLifetimePoints.cpp  TestConfigMultiQ.cpp  TestConfigOtherPoints.cpp  TestConfigPlaceInfo.cpp  TestConfigScoring.cpp  TestConfigSubLevel.cpp  TestConfigTitle.cpp  TestConfigTitlePoints.cpp  TestConfigVenue.cpp  TestDate.cpp  TestDog.cpp  TestDogClub.cpp  TestDogExistingPoints.cpp  TestDogNotes.cpp  TestDogReferenceRun.cpp  TestDogRegNum.cpp  TestDogRun.cpp  TestDogRunOtherPoints.cpp  (+21 more)
src/TroubleReport/: Resource.h  TroubleReport.cpp  TroubleReport.rc  TroubleReport.vcproj
src/UnitTest++/: Common.props  Debug DLL.vsprops  Debug LIB.props  Debug LIB.vsprops  Debug Settings.props  Debug Settings.vsprops  Makefile.in  Release DLL.props  Release DLL.vsprops  Release LIB.props  Release LIB.vsprops  Release Settings.props  Release Settings.vsprops  TestUnitTest++.VC11.vcxproj  TestUnitTest++.VC7.vcproj  (+14 more)
(+3408 files in other folders)
